deploy/complete/kubernetes/mushop.yaml
---
# Source: mushop/templates/ingress-edge.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mushop
  labels:
    app.kubernetes.io/name: mushop
    helm.sh/chart: mushop-0.1.1
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # change this for user-specific ingress
    - host: mushop.example.com
      http:
        paths:
        - path: /
          backend:
            # intentionally w/o .Release.Name for metrics workshop
            serviceName: edge
            servicePort: 80
---
# Source: mushop/charts/api/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-api
  labels:
    app.kubernetes.io/name: api
    helm.sh/chart: api-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 3000
---
# Source: mushop/charts/assets/templates/assets-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-assets
  labels:
    app.kubernetes.io/name: assets
    helm.sh/chart: assets-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: assets
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 3000
---
# Source: mushop/charts/carts/templates/carts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-carts
  labels:
    app.kubernetes.io/name: carts
    helm.sh/chart: carts-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: carts
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: mushop/charts/catalogue/templates/catalogue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-catalogue
  labels:
    app.kubernetes.io/name: catalogue
    helm.sh/chart: catalogue-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: catalogue
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: mushop/charts/edge/templates/edge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  # intentionally w/o .Release.Name for metrics workshop
  name: edge
  labels:
    app.kubernetes.io/name: edge
    helm.sh/chart: edge-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: edge
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 8081
---
# Source: mushop/charts/fulfillment/templates/fulfillment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fulfillment
  labels: 
    app.kubernetes.io/name: fulfillment
    helm.sh/chart: fulfillment-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    run: fulfillment
spec:
  selector:
    app.kubernetes.io/name: fulfillment
    app.kubernetes.io/instance: mushop
    run: fulfillment
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
---
# Source: mushop/charts/nats/templates/nats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-nats
  annotations:
    prometheus.io/path: "/prometheus"
  labels:
    app.kubernetes.io/name: nats
    helm.sh/chart: nats-0.1.0
    app.kubernetes.io/instance: mushop
    run: nats
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: mushop
    run: nats
  ports:
    - name: client
      port: 4222
      protocol: TCP
      targetPort: 4222
    - name: routes
      port: 6222
      protocol: TCP
      targetPort: 6222
    - name: monitoring
      port: 8222
      protocol: TCP
      targetPort: 8222
---
# Source: mushop/charts/orders/templates/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-orders
  labels:
    app.kubernetes.io/name: orders
    helm.sh/chart: orders-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: orders
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: mushop/charts/payment/templates/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  # TODO: update to payment.fullname when orders can receive variable
  name: payment
  labels: 
    app.kubernetes.io/name: payment
    helm.sh/chart: payment-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: payment
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: mushop/charts/session/templates/session-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-session
  labels:
    app.kubernetes.io/name: session
    helm.sh/chart: session-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: session
    app.kubernetes.io/instance: mushop
  ports:
    - port: 6379
      name: redis
---
# Source: mushop/charts/storefront/templates/storefront-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-storefront
  labels:
    app.kubernetes.io/name: storefront
    helm.sh/chart: storefront-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: storefront
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 8081
---
# Source: mushop/charts/user/templates/user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushop-user
  labels: 
    app.kubernetes.io/name: user
    helm.sh/chart: user-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: user
    app.kubernetes.io/instance: mushop
  ports:
    - port: 80
      name: http
      targetPort: 3000
---
# Source: mushop/charts/api/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-api
  labels:
    app.kubernetes.io/name: api
    helm.sh/chart: api-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      app.kubernetes.io/name: api
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: api
        version: "2.2.1"
        app.kubernetes.io/name: api
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: api
          image: "iad.ocir.io/oracle/ateam/mushop-api:2.2.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
---
# Source: mushop/charts/assets/templates/assets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-assets
  labels:
    app.kubernetes.io/name: assets
    helm.sh/chart: assets-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
      app.kubernetes.io/name: assets
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: assets
        version: "1.0.1"
        app.kubernetes.io/name: assets
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: assets
          image: "iad.ocir.io/oracle/ateam/mushop-assets:1.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
---
# Source: mushop/charts/carts/templates/carts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-carts
  labels: 
    app.kubernetes.io/name: carts
    helm.sh/chart: carts-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
      app.kubernetes.io/name: carts
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: carts
        version: "1.5.0"
        app.kubernetes.io/name: carts
        app.kubernetes.io/instance: mushop
        mockmode: "catalogue"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      containers:
        - name: carts
          image: "iad.ocir.io/oracle/ateam/mushop-carts:1.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
            # for init container
            - name: wallet
              mountPath: /usr/lib/oracle/19.3/client64/lib/network/admin/
              readOnly: true
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
        
        # local wallet
        - name: wallet
          secret:
            secretName: carts-oadb-wallet
            defaultMode: 256
        # service init configMap
        - name: initdb
          configMap:
            name: mushop-carts-init
            items:
            - key: atp.init.sql
              path: service.sql
      nodeSelector:
          beta.kubernetes.io/os: linux
---
# Source: mushop/charts/catalogue/templates/catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-catalogue
  labels: 
    app.kubernetes.io/name: catalogue
    helm.sh/chart: catalogue-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
      app.kubernetes.io/name: catalogue
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: catalogue
        version: "1.2"
        app.kubernetes.io/name: catalogue
        app.kubernetes.io/instance: mushop
        mockmode: "catalogue"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: catalogue
          image: "iad.ocir.io/oracle/ateam/mushop-catalogue:1.2"
          imagePullPolicy: IfNotPresent
          command: ["/app"]
          args:
          - -port=80
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: wallet
              mountPath: /usr/lib/oracle/19.3/client64/lib/network/admin/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
      volumes:
        
        # local wallet
        - name: wallet
          secret:
            secretName: catalogue-oadb-wallet
            defaultMode: 256
        # service init configMap
        - name: initdb
          configMap:
            name: mushop-catalogue-init
            items:
            - key: atp.init.sql
              path: service.sql
---
# Source: mushop/charts/edge/templates/edge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-edge
  labels:
    app.kubernetes.io/name: edge
    helm.sh/chart: edge-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge
      app.kubernetes.io/name: edge
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: edge
        version: "1.1.0"
        app.kubernetes.io/name: edge
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: edge
          image: "iad.ocir.io/oracle/ateam/mushop-edge-router:1.1.0"
          imagePullPolicy: IfNotPresent
          args:
          - --configfile=/config/traefik.toml
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - mountPath: /config
              name: config
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
      volumes:
        - name: config
          configMap:
            name: mushop-edge
---
# Source: mushop/charts/fulfillment/templates/fulfillment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-fulfillment
  labels:
    app.kubernetes.io/name: fulfillment
    helm.sh/chart: fulfillment-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    run: fulfillment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fulfillment
      app.kubernetes.io/name: fulfillment
      app.kubernetes.io/instance: mushop
      run: fulfillment
  template:
    metadata:
      labels:
        app: fulfillment
        version: "1.1.0"
        app.kubernetes.io/name: fulfillment
        app.kubernetes.io/instance: mushop
        run: fulfillment
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        prometheus.io/scrape: "true"
        prometheus.io/path: /prometheus
        prometheus.io/port: "80"
    spec:
      containers:
        - name: fulfillment
          image: "iad.ocir.io/oracle/ateam/mushop-fulfillment:1.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
# Source: mushop/charts/nats/templates/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-nats
  labels:
    app.kubernetes.io/name: nats
    helm.sh/chart: nats-0.1.0
    app.kubernetes.io/instance: mushop
    run: nats
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
      app.kubernetes.io/name: nats
      app.kubernetes.io/instance: mushop
      run: nats
  template:
    metadata:
      labels:
        app: nats
        version: "2.1.2"
        app.kubernetes.io/name: nats
        app.kubernetes.io/instance: mushop
        run: nats
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "7777"
    spec:
      containers:
        - name: nats
          image: "nats:2.1.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: client
              containerPort: 4222
              protocol: TCP
            - name: routes
              containerPort: 6222
              protocol: TCP
            - name: monitoring
              containerPort: 8222
              protocol: TCP
        - name: nats-exporter
          image: "synadia/prometheus-nats-exporter:0.6.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7777
          args:
            - -D 
            - -varz 
            - -channelz
            - -connz
            - -serverz
            - -subz
            - -gatewayz
            - "http://localhost:8222"
---
# Source: mushop/charts/orders/templates/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-orders
  labels: 
    app.kubernetes.io/name: orders
    helm.sh/chart: orders-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
      app.kubernetes.io/name: orders
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: orders
        version: "2.2.2"
        app.kubernetes.io/name: orders
        app.kubernetes.io/instance: mushop
        mockmode: "catalogue"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "80"
    spec:
      containers:
        - name: orders
          image: "iad.ocir.io/oracle/ateam/mushop-orders:2.2.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 5
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              path: /actuator/health/readiness
              port: http

          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
            # for init container
            - name: wallet
              mountPath: /wallet/
              readOnly: true
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
        
        # local wallet
        - name: wallet
          secret:
            secretName: orders-oadb-wallet
            defaultMode: 256
        # service init configMap
        - name: initdb
          configMap:
            name: mushop-orders-init
            items:
            - key: atp.init.sql
              path: service.sql
      nodeSelector:
          beta.kubernetes.io/os: linux
---
# Source: mushop/charts/payment/templates/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-payment
  labels:
    app.kubernetes.io/name: payment
    helm.sh/chart: payment-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
      app.kubernetes.io/name: payment
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: payment
        version: "0.0.1"
        app.kubernetes.io/name: payment
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: payment
          image: "iad.ocir.io/oracle/ateam/mushop-payment:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 99m
              memory: 100Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
      nodeSelector:
          beta.kubernetes.io/os: linux
---
# Source: mushop/charts/session/templates/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-session
  labels:
    app.kubernetes.io/name: session
    helm.sh/chart: session-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
      app.kubernetes.io/name: session
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: session
        version: "alpine"
        app.kubernetes.io/name: session
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: session
          image: "redis:alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          securityContext:
            capabilities:
              add:
              - CHOWN
              - SETGID
              - SETUID
              drop:
              - all
            readOnlyRootFilesystem: true
      nodeSelector:
        beta.kubernetes.io/os: linux
---
# Source: mushop/charts/storefront/templates/storefront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-storefront
  labels:
    app.kubernetes.io/name: storefront
    helm.sh/chart: storefront-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
      app.kubernetes.io/name: storefront
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: storefront
        version: "2.1.2"
        app.kubernetes.io/name: storefront
        app.kubernetes.io/instance: mushop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: storefront
          image: "iad.ocir.io/oracle/ateam/mushop-storefront:2.1.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
            - name: status
              containerPort: 8888
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              - CHOWN
              - SETGID
              - SETUID
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
# Source: mushop/charts/user/templates/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mushop-user
  labels: 
    app.kubernetes.io/name: user
    helm.sh/chart: user-0.1.0
    app.kubernetes.io/instance: mushop
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      app.kubernetes.io/name: user
      app.kubernetes.io/instance: mushop
  template:
    metadata:
      labels:
        app: user
        version: "1.1.0"
        app.kubernetes.io/name: user
        app.kubernetes.io/instance: mushop
        mockmode: "catalogue"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: user
          image: "iad.ocir.io/oracle/ateam/mushop-user:1.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: wallet
              mountPath: /usr/lib/oracle/19.3/client64/lib/network/admin/
              readOnly: true
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        
        # local wallet
        - name: wallet
          secret:
            secretName: user-oadb-wallet
            defaultMode: 256
        # service init configMap
        - name: initdb
          configMap:
            name: mushop-user-init
            items:
            - key: atp.init.sql
              path: service.sql
      nodeSelector:
        beta.kubernetes.io/os: linux
